	  preflight failures, and to use the file sector buffer as a bounce buffer
	  when a user-supplied buffer is not suitable for DMA. From Mike Smith
	  (2013-10-18).
	* arch/arm/src/sama5/chip/sam_rtc.h and sam_wdt.h:  Add WDT and RTC
	  register definition header files (2013-10-18).
	* arch/arm/src/sama5/chip/sam_rtc.c and sam_rtc.h:  Basic RTC driver.
	  Support for RTC alarms is fragmentary and this has not yet been hooked
	  into the build system  (2013-10-18).
	* Various Spark and CC3000 files:  Update by David Sidrane (2013-10-18).
	* arch/arm/src/sama5/chip/sam_gpbr.h:  Add SAMA5 GPBR register
	  definitions (2013-10-19).
	* Kconfig:  Add support for CONFIG_DEBUG_RTC (2013-10-19).
	* configs/sama5d3x-ek/README.txt, demo/defconfig:  Describe how to
	  enable RTC support for the nsh/ configuration; RTC is now enabled by
	  default in the demo configuration (2013-10-19).
	* arch/arm/src/sama5/sam_rtc.h and other files:  Hook the SAMA5 RTC
	  driver into the build system; Verify the correct operation of the
	  SAMA5 RTC driver (2013-10-19).
	* arch/arm/src/sama5/sam_wdt.c and .h:  Add a SAMA5 watchdog timer
	  drvier. Untested on initial check-in (2013-10-19).
	* arch/arm/src/sama5/sam_trng.c, sam_trng.h, and chip/sam_trng.h:  Add
	  a /dev/random driver based on the SAMA5D3 TRNG peripheral (2013-10-20).
	* configs/sama5d3x-3k/demo:  The TRNG and /dev/random are now enabled
	  by default in the demo configuration (2013-10-20).
	* arch/arm/src/sama5/chip/sam_tc.h:  SAMA5D3 timer/counter register
	  definition header file (2013-10-20).
	* libc/stdio/lib_sscanf.c:  scanf() fixes from kfrolov: 1) sscanf()
	  function hangs in the following example: sscanf("2", "%u,%u,%u,%u", ...),
	  2) sscanf() returns incorrect number of parsed numbers if some arguments
	  can't be parsed: sscanf("=2", "%u,%u,%u,%u",...)==1 instead of 0, and
	  3) using of char* instead of const char* in vsscanf function leads to
	  warnings from GCC (2013-10-21).